input output tabla

--- a/angular.json
+++ b/angular.json
@@ -136,5 +136,8 @@
       }
     }
   },
-  "defaultProject": "PracticaParcial"
+  "defaultProject": "PracticaParcial",
+  "cli": {
+    "analytics": false
+  }
 }
